# zerion

./: .env.example  .gitignore  README.md  main.py  manage.py  pyproject.toml  requirements.txt
.zerion_memory/: decisions.json
ecommerce_admin_panel/backend/: models.py
ecommerce_admin_panel/frontend/: App.js
memory/chroma/: chroma.sqlite3
skills/: django_architect.md  git_ai.md  react_nextjs.md  windows_cli_ai.md
skills/_index/: skill_embeddings.json
skills/django-expert/: examples.md  memory.md  skill.yaml  skill_brain.md  system.md  workflow.md
skills/nextjs-expert/: examples.md  memory.md  skill.yaml  system.md  workflow.md
skills/powershell-expert/: examples.md  skill.yaml  system.md  workflow.md
skills/python-expert/: examples.md  skill.yaml  system.md  workflow.md
skills/react-expert/: skill.yaml  system.md
skills/tailwind-design/: examples.md  memory.md  skill.yaml  system.md  workflow.md
skills/ui-ux-design/: examples.md  skill.yaml  system.md  workflow.md
zerion_core/: __init__.py  config.py  main.py  session.py
zerion_core/agents/: __init__.py  base.py  cli_agent.py  core_agents.py  planner.py
zerion_core/benchmark/: __init__.py  ab_testing.py  collaboration.py  consolidation.py  engine.py  failure_analysis.py  leaderboard.py  manager.py  models.py  reputation.py  score_engine.py  workflow_bench.py
zerion_core/bus/: __init__.py  message_bus.py
zerion_core/cli/: __init__.py  app.py  benchmark_commands.py  commands.py  diff.py  panels.py  skill_commands.py  validators.py
zerion_core/llm/: __init__.py  model_router.py  ollama.py
(+88 files in other folders)
