[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zerion-core"
version = "0.1.0"
description = "Local-first multi-agent coding platform with long-term memory"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "chromadb>=0.5.0",
    "rich>=13.7.0",
    "textual>=0.78.0",
    "prompt-toolkit>=3.0.43",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "networkx>=3.2",
    "neo4j>=5.19.0",
    "pyyaml>=6.0",
    "gitpython>=3.1.41",
    "pygments>=2.17.0",
    "markdown-it-py>=3.0.0",
]

[project.scripts]
zerion = "zerion_core.main:main"

[tool.hatch.build.targets.wheel]
packages = ["zerion_core"]
